# -

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mypy.ini  pyproject.toml  railway.toml  ruff.toml
.github/workflows/: ci.yml
apps/api/: main.py
apps/cli/: demo.py
docs/: architecture.md  vision.md
docs/adr/: ADR-001-project-foundation.md
tests/: conftest.py  test_contracts.py  test_imports.py  test_interfaces.py  test_mock_executor.py  test_registry.py
