[project]
name = "shurah"
version = "0.1.0"
description = "منصة لاتخاذ القرار بالاعتماد على عدة نماذج ذكاء اصطناعي"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "aiohttp>=3.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
shurah-api = "apps.api.main:app"

[tool.uvicorn]
host = "0.0.0.0"
port = 8000

[tool.setuptools.packages.find]
where = ["packages"]
include = ["packages*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4", "T20"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.13"
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["packages"]
